# agentic-workflows

./: .ai-prompting-hub.sh  .cleanup-protect  .editorconfig  .gitattributes  .gitignore  .learnings.jsonl  .rgignore  .windsurfrules  2026-04-19-CURRENT-SESSION-HISTORY.md  44-HISTORY-WITH-CODEX.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EARLY-HISTORY-WITH-CODEX.md  HANDOVER.md  HISTORY.md  LATE-HISTORY-WITH-CODEX.md  MIDDLE-HISTORY-WITH-CODEX.md  README.md  SESSION-45-HISTORY-WITH-CODEX.md  agentic-config-optimization-HISTORY-WITH-CODEX.md  buglog.json  constitution.md  counsel-models.json  df_contents.txt  git-best-practices-and-template-refactor-HISTORY.md  git-github-best-practices.md  opencode.json  project-brief-for-peer.txt  quality-standards.md  repo-graph.html  session-44-HISTORY-WITH-CODEX.md  session-state.json  skills  swarmvault.schema.md  topic-insights.md  workflow-graph.html  workflow-state.json  workspace-system-overview.md
.codex/: hooks.json
adapters/terminal-bench/: README.md  adapter_metadata.json  parity_experiment.json  pyproject.toml  run_5task-smoke.yaml  run_opencode-go-test.yaml  run_terminal-bench.yaml
adapters/terminal-bench/datasets/: terminal-bench-manifest.json
adapters/terminal-bench/jobs/2026-05-20__21-27-52/: config.json  lock.json  result.json
adapters/terminal-bench/jobs/2026-05-20__21-27-52/break-filter-js-from-html__u4XwxSn/: config.json  result.json
adapters/terminal-bench/jobs/2026-05-20__21-27-52/configure-git-webserver__Lp3Ub8w/: config.json  result.json
adapters/terminal-bench/src/terminal_bench/: adapter.py  main.py
(+1241 files in other folders)
